--- a/index.html
+++ b/index.html
@@ -4,31 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel = "stylesheet" type = "text/css" href = "main.css"/> 
     <title>Document</title>
 </head>
 
 <!--BODY HTML-->
 <body>
 <div class="main" >
-    <h1>Priscilla Mitchell_3.4 Website: Javascript Test</h1>
+    <h1>Priscilla Mitchell_4.5 Website: Javascript Test</h1>
+    <p id="demo"> <!--This is the switch statement!-->
+    <article> I HOPE ALL OF YOU GUYS HAVE A FANTASTIC WEEKEND! :3</article>
 
-    <p id="demo"> What does this button do? 
-        Why dont you click it to find out? :3 </p>
-
-    <button type="button" onclick="show()" id="rickbutton"> Click me!</button>
-
-    <img id="rickgif" src="styles/assets/rick-roll-rick-rolled.gif" 
-    alt="my image"style="width:100px">
+<img src="styles/giphy.gif" 
+    alt=" the minions"style="width:200px">
+   
 </div>
 
+
+<!--STRING METHOD-->
+ <div>
+    <h2>You deserve all the nice things! :3</h2>
+    <p id="person"> Do ya wanna know who's the coolest person in town?</p>
+<button type="button" onclick="string(method)"> Guess who it is?</button>
+
+ </div>
 
 
 
 <div>
     <h2> Click button to reveal answer</h2>
     <p id="answer">Who's a silly goose?</p>
-    <button onclick="clicked()">Try it</button>
+    <button onclick="">Try it</button>
 
     
    
