Update index.html_myscript 4:49pm feb9

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  <div>
     <h2>You deserve all the nice things! :3</h2>
     <p id="person"> Do ya wanna know who's the coolest person in town?</p>
-<button type="button" onclick="string(method)"> Guess who it is?</button>
+<button type="button" onclick="string()"> Guess who it is?</button>
 
  </div>
 
